<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:id="@+id/titleLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal" >

            <TextView
                android:id="@+id/wizardTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wizard_title"
                android:textAppearance="?android:attr/textAppearance" />

            <TextView
                android:id="@+id/wizardProgressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="8dp"
                android:text="@string/processing"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:max="100"
            android:progress="10" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bodyLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="@dimen/activity_wizard_title_margin"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/wizardMainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wizard_text_input_password1" />

        <EditText
            android:id="@+id/wizardEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="12"
            android:inputType="text" />

        <Button
            android:id="@+id/wizardSubButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onSubButton"
            android:text="@string/wizard_button_wifi" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/footerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp" >

        <Button
            android:id="@+id/wizardCancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:minWidth="90dp"
            android:onClick="onCancel"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/wizardNextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:minWidth="90dp"
            android:text="@string/wizard_button_next" />
    </LinearLayout>

</RelativeLayout>