<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_sendlog_report_type"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/sendlog_report_type"
            android:layout_width="190dp"
            android:layout_height="0dip"
            android:layout_weight="9.82"
            android:entries="@array/entries_menu_sendlog_type" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/menu_sendlog_message"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/sendlog_message"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:ems="10"
            android:gravity="top|left"
            android:inputType="textMultiLine" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/sendLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSendLog"
            android:text="@string/send_log" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textWhatKind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:clickable="true"
                android:onClick="onWhatKind"
                android:text="@string/menu_sendlog_what"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/link" />

            <!-- 
            <TextView
                android:id="@+id/textReply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:clickable="true"
                android:onClick="onReply"
                android:text="@string/menu_sendlog_reply"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/link" />
                 -->
        </LinearLayout>
    </LinearLayout>

</LinearLayout>